# packagekit__PackageKit-Qt

./: AUTHORS  BUGS  Doxyfile  MAINTAINERS  QPackageKit.pro
gui/: CMakeLists.txt  MainWindow.cpp  MainWindow.h  PackageModel.cpp  PackageModel.h  gui.pro  main.cpp  mainwindow.ui  resources.qrc
gui/AddRm/: CMakeLists.txt  PkAddRm.cpp  PkAddRm.h  PkAddRm.ui  PkAddRm_Model.cpp  PkAddRm_Model.h  PkDelegate.cpp  PkDelegate.h  PkRequirements.cpp  PkRequirements.h  PkRequirements.ui  PkReviewChanges.cpp  PkReviewChanges.h  PkReviewChanges.ui  PkTransaction.cpp  PkTransaction.h  kpk-addrm.cpp  kpk-addrm.h
gui/Common/: PkStrings.cpp  PkStrings.h  PkTransaction.cpp  PkTransaction.h  PkTransaction.ui
gui/Desktop/: CMakeLists.txt  kpackagekit.desktop  kpk_addrm.desktop  kpk_settings.desktop  kpk_update.desktop
gui/KPackageKit/: CMakeLists.txt  KPackageKit.notifyrc  PkNotify.cpp  PkNotify.h  kpk.cpp  kpk.h  main.cpp
gui/KPackageKitD/: CMakeLists.txt  kpackagekitd.cpp  kpackagekitd.h
gui/Settings/: CMakeLists.txt  PkConfigSkell.cpp  PkConfigSkell.h  PkSettings.cpp  PkSettings.h  PkSettings.ui  kpk-settings.cpp  kpk-settings.h
gui/Updater/: CMakeLists.txt  PkAddRm_Delegate.cpp  PkAddRm_Delegate.h  PkAddRm_Model.cpp  PkAddRm_Model.h  PkUpdate.cpp  PkUpdate.h  kpk-update.cpp  kpk-update.h  pkg_item.cpp  pkg_item.h
gui/cmake/modules/: FindQPackageKit.cmake
gui/desktop/: kpackagekit.desktop  kpk_update.desktop  settingsadd_and_remove_software.desktop
gui/ui/: CMakeLists.txt  PkManage.cpp  PkManage.h  PkManage.ui  PkSettings.ui  PkUpdate.cpp  PkUpdate.ui  kpk-addrm.cpp  kpk-addrm.h  kpk-packagemodel.cpp  kpk-packagemodel.h  kpk-settings.cpp  kpk-settings.h  kpk-update.cpp  kpk-update.h  tar.tar
gui/ui/AddRm/: CMakeLists.txt  PkAddRm.cpp  PkAddRm.h  PkAddRm.ui  PkAddRm_Delegate.cpp  PkAddRm_Delegate.h  PkAddRm_Model.cpp  PkAddRm_Model.h  PkAddRm_Transaction.cpp  PkAddRm_Transaction.h  PkAddRm_Transaction.ui  PkDelegate.cpp  PkDelegate.h  PkRequirements.cpp  PkRequirements.h  PkRequirements.ui  PkReviewChanges.cpp  PkReviewChanges.h  PkReviewChanges.ui  PkTransaction.cpp  PkTransaction.h  PkTransaction.ui  kpk-addrm.cpp  kpk-addrm.h
gui/ui/Common/: PkStrings.cpp  PkStrings.h
gui/ui/KPackageKitD/: kpackagekitd.cpp  kpackagekitd.h
gui/ui/Settings/: CMakeLists.txt  PkSettings.cpp  PkSettings.h  kpk-settings.cpp  kpk-settings.h
gui/ui/Updater/: CMakeLists.txt  PkAddRm_Delegate.cpp  PkAddRm_Model.cpp  PkAddRm_Model.h  PkUpdate.cpp  PkUpdate.h  PkUpdate.ui  kpk-update.cpp  kpk-update.h  pkg_item.h
gui/ui/desktop/: CMakeLists.txt  kpackagekitd.desktop  kpk_addrm.desktop  kpk_settings.desktop  settings-add-and-remove-software.desktop
gui/widgets/FilterMenu/: FilterMenu.cpp  FilterMenu.h  FilterMenu.pro  main.cpp
lib/: Actions.h  CMakeLists.txt  CentralProxy.cpp  CentralProxy.h  Client.cpp  Client.h  Connection.cpp  Connection.h  DBusProxy.cpp  DBusProxy.h  Daemon.cpp  Daemon.h  Enum.h  Error.cpp  Error.h  Exit.h  Groups.h  Info.h  JobList.cpp  Network-Dummy.h  Network-NetworkManager.cpp  Network-NetworkManager.h  Network.cpp  Network.h  Package.cpp  Package.h  PackageId.cpp  PackageId.h  PkPackage.cpp  PkPackage.h  PolkitClient.cpp  PolkitClient.h  Provides.h  QPackageKit  QPackageKit.h  QPackageKitClient.cpp  QPackageKitClient.h  QPackageKitInterface.cpp  QPackageKitInterface.h  Restart.h  (+16 more)
lib/modules/: CMakeLists.txt  FindQPackageKit.cmake
lib/tests/BackendDetails/: .backendDetails.cpp.swp  BackendDetails.pro  backendDetails.cpp  run.sh
lib/tests/Connection/: Connection.pro  run.sh  testClient.cpp  testClient.h  testConnection.cpp
lib/tests/Enum/: Enum.pro  run.sh  testEnum.cpp
lib/tests/Finished/: Finished.pro  Receiver.cpp  Receiver.h  run.sh  testFinished.cpp
lib/tests/GetActions/: GetActions.pro  getActions.cpp
lib/tests/Install/: Install.pro  run.sh  testCallback.cpp  testCallback.h  testInstall.cpp
lib/tests/Package/: Package.pro  run.sh  testPackage.cpp
lib/tests/Role/: Role.pro  run.sh  testRole.cpp
lib/tests/Search/: Search.pro  run.sh  testCallback.cpp  testCallback.h  testSearch.cpp
lib/tests/Status/: Status.pro  run.sh  testStatus.cpp
lib/tests/Transaction/: Transaction.pro  run.sh  transaction.cpp
src/: Connection.cpp  EnumList.cpp  EnumList.h  Enums.cpp  Enums.h  Error.cpp  Error.h  JobList.cpp  JobList.h  Network.cpp  Network.h  PackageId.cpp  PackageId.h  PolkitClient.cpp  PolkitClient.h  TaskList.cpp  TaskList.h  utils.cpp  utils.h
